added ESC key hook and font fix

--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@
 
 @font-face {
     font-family: 'Roboto';
-    src: url('../fonts/Roboto-medium.ttf') format('truetype');
+    src: url('../fonts/Roboto-regular.ttf') format('truetype');
     font-weight: normal;
 }
 
