--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,6 @@ body {
 
 .clock {
     cursor: default;
-    pointer-events: none;
     height: 80px;
     display: grid;
     grid-template-columns: [time] 1fr [weather] auto;
@@ -55,6 +54,8 @@ body {
     grid-column: time;
     background: #fff;
     color: var(--accent);
+    position: relative;
+    overflow: hidden;
 }
 
 .time p:not([hour]) {
@@ -84,6 +85,8 @@ body {
     grid-column: weather;
     background: var(--accent);
     font: 500 41px 'Lemon/Milk light', sans-serif;
+    position: relative;
+    overflow: hidden;
 }
 
 .clock .time, .clock .weather {
@@ -329,4 +332,76 @@ body {
 
 @keyframes spin {
     100% { transform: rotate(360deg); }
+}
+
+.stats {
+    position: absolute;
+    background: var(--accent);
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    right: 100%;
+    transition: all .4s ease-in-out;
+}
+
+.stats p[description] {
+    font: 300 22px 'Roboto', sans-serif;
+    text-transform: capitalize;
+    letter-spacing: .5px;
+}
+
+.stats p {
+    color: #fff !important;
+}
+
+.weather p[weather] {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #fff;
+    width: 100%;
+    height: 100%;
+    right: -100%;
+    margin: 0 0 0 1em;
+    transition: all .4s ease-in-out;
+}
+
+.clock:hover .stats {
+    right: 0;
+}
+
+.clock:hover .weather p[weather] {
+    right: 0;
+}
+
+.weather p[weather] i[sunny] {
+    color: #ff4b8d !important;
+}
+
+.weather p[weather] i[cloudy] {
+    color: #76dedf !important;
+}
+
+.stats p[location] {
+    font: 700 12px 'Roboto', sans-serif;
+    text-transform: capitalize;
+}
+
+.stats .date {
+    margin: 0 1.5em 0 0;
+    text-align: center;
+    box-shadow: inset -2px 0 0 #fff;
+    padding: .1em 2em 0 0;
+}
+
+.stats .date p[month] {
+    font-size: 13px;
+}
+
+.stats .date p[day] {
+    font-weight: 700;
+    font-size: 24px;
 }
